force-app/main/default/objects/Checklist__c/fields/Per_Check_Salary_scales_Completes__c.field-meta.xml
<CustomField>
    <fullName>Per_Check_Salary_scales_Completes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.13 Salary scales and benefits</inlineHelpText>
    <label>01.13 Salary scales and benefits</label>
    <type>Checkbox</type>
</CustomField>