force-app/main/default/objects/Checklist__c/fields/Per_Check_Written_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Per_Check_Written_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.13 Written policies</inlineHelpText>
    <label>01.13 Written policies</label>
    <type>Checkbox</type>
</CustomField>