force-app/main/default/objects/Checklist__c/fields/Periodic_change__c.field-meta.xml
<CustomField>
    <fullName>Periodic_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.07 Periodic change</label>
    <type>Checkbox</type>
</CustomField>