force-app/main/default/objects/Checklist__c/fields/Personal_Policy_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Personal_Policy_Section_Completed__c</fullName>
    <formula>OR( Per_Check_Non_discriminatory_environment__c , Per_Check_Training_Cancelled__c , Per_Check_Written_Cancelled__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>