force-app/main/default/objects/Checklist__c/fields/Personnel_Non_discriminatory_Reason__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Non_discriminatory_Reason__c</fullName>
    <inlineHelpText>01.13 Non-discriminatory environment</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>