force-app/main/default/objects/Checklist__c/fields/Personnel_policies_and_procedures__c.field-meta.xml
<CustomField>
    <fullName>Personnel_policies_and_procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Personnel policies and procedures</inlineHelpText>
    <label>01.08 Personnel policies and procedures</label>
    <type>Checkbox</type>
</CustomField>