force-app/main/default/objects/Checklist__c/fields/Personnel_Reason_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Reason_Incomplete__c</fullName>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>