force-app/main/default/objects/Checklist__c/fields/Personnel_Sanction_Completed__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Sanction_Completed__c</fullName>
    <formula>or(  Criminal_background_investigation__c, Four_references__c, Vehicle_insurance__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>