force-app/main/default/objects/Checklist__c/fields/Pets_Complete__c.field-meta.xml
<CustomField>
    <fullName>Pets_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.10 Pets</label>
    <type>Checkbox</type>
</CustomField>