force-app/main/default/objects/Checklist__c/fields/Physical_examination__c.field-meta.xml
<CustomField>
    <fullName>Physical_examination__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.17 Physical examination in 2 working days completed.</inlineHelpText>
    <label>02.17 Physical examination in 2 working</label>
    <type>Checkbox</type>
</CustomField>