force-app/main/default/objects/Checklist__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.16 Placement Completed.</inlineHelpText>
    <label>03.16 Placement</label>
    <type>Checkbox</type>
</CustomField>