force-app/main/default/objects/Checklist__c/fields/Pri_Adoption_Record_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Pri_Adoption_Record_Section_Completed__c</fullName>
    <formula>OR( State_federal_Completed__c , Home_study_includes_Completed__c , Application_complete__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>