force-app/main/default/objects/Checklist__c/fields/Pri_Foster_Care_section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Pri_Foster_Care_section_Completed__c</fullName>
    <formula>OR( Childs_whereabouts_unkno_complet__c , Financial_payments_complete__c , Record_maintenance_complete__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>