force-app/main/default/objects/Checklist__c/fields/Private_Birth_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Private_Birth_Section_Completed__c</fullName>
    <formula>OR( Private_Check_Marital_parental_Cancelled__c , Private_Che_Identity_of_siblings_Cancel__c , Private_Check_Date_of_application_Cancel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>