force-app/main/default/objects/Checklist__c/fields/Private_Cancel_Specified_areas_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Cancel_Specified_areas_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 Specified areas explored with applicant</inlineHelpText>
    <label>02.11 Specified areas explored</label>
    <type>Checkbox</type>
</CustomField>