force-app/main/default/objects/Checklist__c/fields/Private_Che_Education_and_work_history__c.field-meta.xml
<CustomField>
    <fullName>Private_Che_Education_and_work_history__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Education and work history</inlineHelpText>
    <label>03.04 Education and work history</label>
    <type>Checkbox</type>
</CustomField>