force-app/main/default/objects/Checklist__c/fields/Private_Che_Identity_of_siblings_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Che_Identity_of_siblings_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Identity of siblings</inlineHelpText>
    <label>03.04 Identity of siblings</label>
    <type>Checkbox</type>
</CustomField>