force-app/main/default/objects/Checklist__c/fields/Private_Che_multigenerational_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Private_Che_multigenerational_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 multigenerational health history</inlineHelpText>
    <label>03.04 multigenerational health history</label>
    <type>Checkbox</type>
</CustomField>