force-app/main/default/objects/Checklist__c/fields/Private_Check_Background_summary_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Background_summary_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Background summary</inlineHelpText>
    <label>03.04 Background summary</label>
    <type>Checkbox</type>
</CustomField>