force-app/main/default/objects/Checklist__c/fields/Private_Check_Date_of_application_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Date_of_application_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Date of application or referral</inlineHelpText>
    <label>03.04 Date of application or referral</label>
    <type>Checkbox</type>
</CustomField>