force-app/main/default/objects/Checklist__c/fields/Private_Check_Date_of_birth_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Date_of_birth_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Date of birth if child has been born</inlineHelpText>
    <label>03.04 Date of birth if child has been bo</label>
    <type>Checkbox</type>
</CustomField>