force-app/main/default/objects/Checklist__c/fields/Private_Check_Expected_due_date_Cance__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Expected_due_date_Cance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Expected due date if parent is pregnant</inlineHelpText>
    <label>03.04 Expected due date</label>
    <type>Checkbox</type>
</CustomField>