force-app/main/default/objects/Checklist__c/fields/Private_Check_Face_Sheet_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Face_Sheet_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Face Sheet</inlineHelpText>
    <label>03.04 Face Sheet</label>
    <type>Checkbox</type>
</CustomField>