force-app/main/default/objects/Checklist__c/fields/Private_Check_Face_Sheet_Remove__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Face_Sheet_Remove__c</fullName>
    <inlineHelpText>03.04 Face Sheet</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>