force-app/main/default/objects/Checklist__c/fields/Private_Check_Guardianship_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Guardianship_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.05 Guardianship order</inlineHelpText>
    <label>03.05 Guardianship order</label>
    <type>Checkbox</type>
</CustomField>