force-app/main/default/objects/Checklist__c/fields/Private_Check_Marital_parental_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Marital_parental_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Marital, parental, social relationships</inlineHelpText>
    <label>03.04 Marital, parental</label>
    <type>Checkbox</type>
</CustomField>