force-app/main/default/objects/Checklist__c/fields/Private_Check_Photos_of_parents_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Photos_of_parents_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Photos of parents</inlineHelpText>
    <label>03.04 Photos of parents</label>
    <type>Checkbox</type>
</CustomField>