force-app/main/default/objects/Checklist__c/fields/Private_Check_Voluntary_relinquishment__c.field-meta.xml
<CustomField>
    <fullName>Private_Check_Voluntary_relinquishment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Voluntary relinquishment</inlineHelpText>
    <label>03.04 Voluntary relinquishment</label>
    <type>Checkbox</type>
</CustomField>