force-app/main/default/objects/Checklist__c/fields/Private_Child_Adoption_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Private_Child_Adoption_Section_Completed__c</fullName>
    <formula>OR( Face_Sheet_Complete__c , Race_relegion_etnic_complete__c , If_school_age_edu_completed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>