force-app/main/default/objects/Checklist__c/fields/Private_Date_of_birth_Remove__c.field-meta.xml
<CustomField>
    <fullName>Private_Date_of_birth_Remove__c</fullName>
    <inlineHelpText>03.04 Date of birth if child has been born</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>