force-app/main/default/objects/Checklist__c/fields/Private_For_Marriage_and_Divorce_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_For_Marriage_and_Divorce_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 Marriage and Divorce Certificates</inlineHelpText>
    <label>02.11 Marriage and Divorce Certificates</label>
    <type>Checkbox</type>
</CustomField>