force-app/main/default/objects/Checklist__c/fields/Private_Forcast_Home_safety_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forcast_Home_safety_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 Home safety documented</inlineHelpText>
    <label>02.11 Home safety documented</label>
    <type>Checkbox</type>
</CustomField>