force-app/main/default/objects/Checklist__c/fields/Private_Forcast_Pre_Service_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forcast_Pre_Service_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.12 Pre-Service Training. 20hrs.</inlineHelpText>
    <label>02.12 Pre-Service Training. 20hrs</label>
    <type>Checkbox</type>
</CustomField>