force-app/main/default/objects/Checklist__c/fields/Private_Fore_Annual_Re_Certifi_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Fore_Annual_Re_Certifi_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.16 Annual Re-Certification</inlineHelpText>
    <label>02.16 Annual Re-Certification</label>
    <type>Checkbox</type>
</CustomField>