force-app/main/default/objects/Checklist__c/fields/Private_Fore_Protective_services_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Fore_Protective_services_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 Protective services checks</inlineHelpText>
    <label>02.11 Protective services checks</label>
    <type>Checkbox</type>
</CustomField>