force-app/main/default/objects/Checklist__c/fields/Private_Forecast_6_hours_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_6_hours_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 6 hours of training annually</inlineHelpText>
    <label>02.11 6 hoursof training annually</label>
    <type>Checkbox</type>
</CustomField>