force-app/main/default/objects/Checklist__c/fields/Private_Forecast_Care_case_Section__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_Care_case_Section__c</fullName>
    <formula>OR( Private_Forcast_Pre_Service_Cancel__c , Private_Forecast_Child_support_Cancel__c , Private_Forecast_Fire_Arms_Cancel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>