force-app/main/default/objects/Checklist__c/fields/Private_Forecast_Child_support_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_Child_support_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 Child support records</inlineHelpText>
    <label>02.11 Child support records</label>
    <type>Checkbox</type>
</CustomField>