force-app/main/default/objects/Checklist__c/fields/Private_Forecast_Criminal_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_Criminal_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 Criminal background checks</inlineHelpText>
    <label>02.11 Criminal background checks</label>
    <type>Checkbox</type>
</CustomField>