force-app/main/default/objects/Checklist__c/fields/Private_Forecast_Fire_and_Health_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_Fire_and_Health_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 Fire and Health Inspections</inlineHelpText>
    <label>02.11 Fire and Health Inspections</label>
    <type>Checkbox</type>
</CustomField>