force-app/main/default/objects/Checklist__c/fields/Private_Forecast_Fire_Arms_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_Fire_Arms_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.10 Fire Arms and Pets</inlineHelpText>
    <label>02.10 Fire Arms and Pets</label>
    <type>Checkbox</type>
</CustomField>