force-app/main/default/objects/Checklist__c/fields/Private_Forecast_Fire_Arms_Remove__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_Fire_Arms_Remove__c</fullName>
    <inlineHelpText>02.10 Fire Arms and Pets</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>