force-app/main/default/objects/Checklist__c/fields/Private_Forecast_Legible_signed_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_Legible_signed_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.11 Legible, signed, and dated</inlineHelpText>
    <label>01.11 Legible, signed and dated</label>
    <type>Checkbox</type>
</CustomField>