force-app/main/default/objects/Checklist__c/fields/Private_Forecast_Medical_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Private_Forecast_Medical_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.11 Medical documentation</inlineHelpText>
    <label>02.11 Medical documentation</label>
    <type>Checkbox</type>
</CustomField>